# CPP-H264-Encoder

./: CMakeLists.txt  README.md
cmake/: H264EncoderConfig.cmake.in
src/: encoder.cpp  encoder.hpp
